--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
-  "buildCommand": "",
-  "devCommand": "",
-  "installCommand": "",
-  "framework": null,
-  "public": "project",
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/pages/$1"
-    }
-  ]
+  "public": "project"
 }
+
