--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,4 @@
 {
-  "buildCommand": "",
-  "framework": null,
-  "public": true,
-  "outputDirectory": "project",
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/pages/index.html"
-    },
-    {
-      "source": "/:path((?!css|images|js)[^.]*)",
-      "destination": "/pages/$1.html"
-    }
-  ]
+  "outputDirectory": "project"
 }
 
